内置函数不定义参数类型